# snapkitty-agentos

./: .gitignore  AGENTS.md  APL_FORTRAN_WINDOWS_README.md  CMakeLists.txt  Dockerfile  README.md  SIGNED_BY.md  flake.nix  package-lock.json  package.json  run_daemon.bat  tsconfig.json
.agentos/: config.json
.agentos/gitbucket/: extract.mjs  init.mjs
.agentos/plasma_gate/: keygen.mjs  pubkey.pem
.agentos/pnp/: founding_problems.json  problem_registry.json  seed.mjs
.agentos/runtime/: apfortran.c  apfortran.h  apfortran.md  apfortranVerify.mjs  apfortran_array.c  apfortran_expr.c  apfortran_fortran.c  apfortran_objc.h  apfortran_objc.m  aplfortranTest.mjs  buildCheck.mjs  clean.mjs  contextBootstrap.mjs  contextCompiler.mjs  contextVerifier.mjs  converge.mjs  core.mjs  gitbucket_sqlite.h  plasmaVerify.mjs  pnpClient.mjs  pnpVerifier.mjs  skillLoader.mjs  skillVerify.mjs  verifyWindows.mjs
.agentos/skills/: registry.json
.github/workflows/: audit.yml  collatz-pages.yml  gh-pages.yml
agentos-frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
agentos-frontend/app/: globals.css  layout.tsx  page.tsx
agentos-frontend/css/: agentos.css
agentos-frontend/data/: agent-personas.json
agentos-frontend/js/: agentos-live.js
agentos-frontend/pages/: index.html
axiom-proof/: Cargo.toml  Makefile  README.md
axiom-proof/docs/: AXIOM.md
axiom-proof/examples/: collatz.axiom  simple.axiom
axiom-proof/src/: lib.rs  main.rs
axiom-proof/src/kernel/: checker.rs  mod.rs  types.f90  worm.rs
axiom-proof/src/stdlib/: complexity.axiom  list.axiom  logic.axiom  nat.axiom  quantum.axiom  sat.axiom
axiom-proof/src/syntax/: parser.rs
collatz-verification/: COLLATZ.md  Cargo.toml
collatz-verification/api/: Cargo.toml
collatz-verification/engine/: Cargo.toml
collatz-verification/engine/src/: lib.rs  main.rs
collatz-verification/frontend/: index.html
collatz-verification/ledger/: collatz_worm.jsonl  merkle_root.txt
collatz-verification/proofs/: Collatz.lean  lakefile.lean
docs/: index.html
docs/plans/: COMPLETE_INFRASTRUCTURE_AUDIT.md  MASTER_INTEGRATION_ORCHESTRATION.md  MATHROSETTA_INTEGRATION_PLAN.md  MULTI_WITNESS_VERIFICATION.md  P_VS_NP_ATTACK_PLAN.md  (+2 more)
math-engine/: README.md  run-swarm.sh
math-skills/: MATH_SKILLS.md  math_skills_master_seal.json  seal_skills.js  seal_skills.mjs  verify_seals.mjs
pnp-attack/: Cargo.toml  PVS_NP.md
pnp-attack/apl/: problem_generator.apl
pnp-attack/fortran/: sat_solver.f90
pnp-attack/src/: coordinator.rs
policies/: pipeline_policy.pl  snapkitty_bom.pl  trust_deed.pl
prism-skills/: Cargo.toml  PRISM.md  prism_skills_master_seal.json  seal.mjs
prism-skills/src/: admission.rs  canonical.rs  lib.rs  sha256d.rs
prism-skills/tests/: integration_test.rs
qec-discovery/: Cargo.toml  QEC.md
qec-discovery/apl/: code_generator.apl
qec-discovery/fortran/: quantum_sim.f90
qec-discovery/src/: coordinator.rs
resonance-math/: RESONANCE.md  package.json  resonance_math_master_seal.json  seal.mjs
scripts/: alignment_checker.py  axiom_kernel.py  build-all.sh  collatz_10k.py  constitutional_boot.py  generate-sbom.sh  hadamard_h12.py  literature_importer.py  mathrosetta_axiom.py  multi_witness.py  nats_bridge.py  orchestrator_stage4.rb  ramsey_r33.py  verify-worm.sh
tests/: agentos.test.mjs
workflows/: extract.yml  pnp_verify.yml  verify.yml
(+82 files in other folders)
