[package]
name = "pnp-attack"
version = "0.1.0"
edition = "2021"
authors = ["SnapKitty Agent OS"]
description = "P vs NP Attack Infrastructure - Multi-agent proof search coordinator"

[[bin]]
name = "pnp-coordinator"
path = "src/coordinator.rs"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
