[package]
name = "prism-skills"
version = "1.0.0"
edition = "2021"
authors = ["SnapKitty Collective"]
description = "Canonical serialization, SHA-256d, ψ-pipeline, WORM sealing, admission validation"
license = "Sovereign Source License v1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
