[package]
name = "qec-discovery"
version = "0.1.0"
edition = "2021"
authors = ["SnapKitty Agent OS"]
description = "Quantum Error Correction Code Discovery System"

[[bin]]
name = "qec-coordinator"
path = "src/coordinator.rs"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
