[package]
name = "collatz-engine"
version = "0.1.0"
edition = "2021"
authors = ["SnapKitty Agent OS"]
description = "Parallel Collatz Conjecture verification engine with WORM ledger integration"

[lib]
name = "collatz_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "collatz-search"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = true
